fix warnings from sonarcube